--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <main class="wrap">
     <header>
-      <div class="logo">IG</div>
+      <img src="assets/logo.svg" class="logo" alt="Imer Group logo">
       <div>
         <h1>Imer Group</h1>
         <div style="color:var(--muted)">Attrezzature e soluzioni per l'edilizia</div>
@@ -55,6 +55,24 @@
         <li>Soluzioni e macchine per posa e taglio di rivestimenti</li>
       </ul>
       <p style="margin-top:12px;color:var(--muted)">Per informazioni dettagliate sui modelli e sui servizi, consultare il catalogo ufficiale o contattare un distributore autorizzato.</p>
+    </section>
+
+    <section class="card" aria-labelledby="images">
+      <h2 id="images">Immagini rappresentative</h2>
+      <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
+        <figure style="flex:1 1 180px; margin:0">
+          <img src="assets/betoniere.svg" alt="Betoniere" style="width:100%;height:auto;border-radius:8px;display:block">
+          <figcaption style="color:var(--muted);font-size:0.95rem;margin-top:6px">Betoniere</figcaption>
+        </figure>
+        <figure style="flex:1 1 180px; margin:0">
+          <img src="assets/pompe.svg" alt="Pompe per malta" style="width:100%;height:auto;border-radius:8px;display:block">
+          <figcaption style="color:var(--muted);font-size:0.95rem;margin-top:6px">Pompe per malta</figcaption>
+        </figure>
+        <figure style="flex:1 1 180px; margin:0">
+          <img src="assets/dumper.svg" alt="Mini dumper" style="width:100%;height:auto;border-radius:8px;display:block">
+          <figcaption style="color:var(--muted);font-size:0.95rem;margin-top:6px">Mini dumper</figcaption>
+        </figure>
+      </div>
     </section>
 
     <section class="card" aria-labelledby="contact">
