Add affiliate pages and representative images (Unsplash)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       <div>
         <h1>Imer Group</h1>
         <div style="color:var(--muted)">Attrezzature e soluzioni per l'edilizia</div>
+        <nav style="margin-top:8px">
+          <a href="index.html" style="margin-right:12px;color:var(--accent);text-decoration:none">Home</a>
+          <a href="imer-lt.html" style="margin-right:12px;color:var(--accent);text-decoration:none">Imer LT</a>
+          <a href="imer-iberica.html" style="color:var(--accent);text-decoration:none">Imer Iberica</a>
+        </nav>
       </div>
     </header>
 
@@ -59,20 +64,22 @@
 
     <section class="card" aria-labelledby="images">
       <h2 id="images">Immagini rappresentative</h2>
+      <p style="margin-top:6px;color:var(--muted)">Immagini rappresentative prese da servizi fotografici pubblici (Unsplash). Sostituisci con foto ufficiali se disponibile.</p>
       <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
+        <figure style="flex:1 1 260px; margin:0">
+          <img src="https://source.unsplash.com/featured/?factory,Italy,Rapolano" alt="Stabilimento di Rapolano - immagine rappresentativa" style="width:100%;height:auto;border-radius:8px;display:block">
+          <figcaption style="color:var(--muted);font-size:0.95rem;margin-top:6px">Stabilimento di Rapolano (foto rappresentativa)</figcaption>
+        </figure>
+        <figure style="flex:1 1 260px; margin:0">
+          <img src="https://source.unsplash.com/featured/?factory,Italy,Udine" alt="Stabilimento di Udine - immagine rappresentativa" style="width:100%;height:auto;border-radius:8px;display:block">
+          <figcaption style="color:var(--muted);font-size:0.95rem;margin-top:6px">Stabilimento di Udine (foto rappresentativa)</figcaption>
+        </figure>
         <figure style="flex:1 1 180px; margin:0">
           <img src="assets/betoniere.svg" alt="Betoniere" style="width:100%;height:auto;border-radius:8px;display:block">
-          <figcaption style="color:var(--muted);font-size:0.95rem;margin-top:6px">Betoniere</figcaption>
-        </figure>
-        <figure style="flex:1 1 180px; margin:0">
-          <img src="assets/pompe.svg" alt="Pompe per malta" style="width:100%;height:auto;border-radius:8px;display:block">
-          <figcaption style="color:var(--muted);font-size:0.95rem;margin-top:6px">Pompe per malta</figcaption>
-        </figure>
-        <figure style="flex:1 1 180px; margin:0">
-          <img src="assets/dumper.svg" alt="Mini dumper" style="width:100%;height:auto;border-radius:8px;display:block">
-          <figcaption style="color:var(--muted);font-size:0.95rem;margin-top:6px">Mini dumper</figcaption>
+          <figcaption style="color:var(--muted);font-size:0.95rem;margin-top:6px">Betoniere (illustrazione)</figcaption>
         </figure>
       </div>
+      <p style="margin-top:10px;font-size:0.85rem;color:var(--muted)">Fonte immagini rappresentative: Unsplash (licenza libera). Per uso ufficiale, sostituire con fotografie aziendali o immagini con licenza appropriata.</p>
     </section>
 
     <section class="card" aria-labelledby="contact">
